# obs-websocket

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  README.md
CI/macos/: install-build-obs-macos.sh  install-dependencies-macos.sh  package-plugin-macos.sh
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  pl-PL.ini  pt-PT.ini  ru-RU.ini  zh-CN.ini  zh-TW.ini
src/: Config.cpp  Utils.h  WSEvents.cpp  WSRequestHandler.cpp  WSRequestHandler.h  WSRequestHandler_AverMediaParseJson.cpp  WSRequestHandler_Recording.cpp  WSServer.cpp  obs-websocket.cpp  obs-websocket.h
src/forms/: settings-dialog.cpp  settings-dialog.ui
